# raspberrify

./: .env.example  .gitignore  README.md  pyproject.toml
raspberrify/: main.py  sense.py  spotify.py
tests/: test_raspberrify.py
