[tool.poetry]
name = "raspberrify"
version = "0.3.0"
description = ""
authors = ["johanneshardt <me@johanneshardt.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Pillow = "^9.0.0"
requests = "^2.25.1"
spotipy = "^2.18.0"
sense-hat = "^2.2.0"
python-dotenv = "^0.17.1"
rtimulib = {path = "../RTIMU/Linux/python"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.5b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
